--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 群組聚合搜索工具
-description: 使用説明:1.使用前務必掛梯子;2.按照“關鍵詞+網址頭”的形式進行搜索，例如“幣 "t.me/"”;3.每次搜索的關鍵詞最好在2~3個，越準確越好;4.聚合搜索工具可搜索8個主流社交網站(YouTube,Twitter,LinkedIn,Instagram,Facebook,Reddit,Tumblr和Tiktok等)
+description: 使用説明:1.使用前務必掛梯子;2.按照“關鍵詞+網址頭”的形式進行搜索,例如“幣 "t.me/"”;3.每次搜索的關鍵詞最好在2~3個,越準確越好;4.聚合搜索工具可搜索8個主流社交網站(YouTube,Twitter,LinkedIn,Instagram,Facebook,Reddit,Tumblr和Tiktok等)
 show_downloads: false
 google_analytics: G-97D50GYB97
 theme: jekyll-theme-cayman
