--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 工具集
-description: 使用説明:務必掛梯子
+description: 使用説明:務必掛梯子, 不能隨意傳播此工具
 show_downloads: false
 google_analytics: G-97D50GYB97
 theme: jekyll-theme-cayman
